quick story wrap fix

--- a/nella.css
+++ b/nella.css
@@ -145,6 +145,7 @@ nav a {
     background-size: cover;
     background-position: bottom;
     display: flex;
+	flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
